# ebpf-udp-analyzer

./: .gitignore  LICENSE  PROJECT_GOAL.md  README.md  harness.md  pyproject.toml  roadmap.md  storage.md
bpf/: Makefile  udp_ingress.bpf.c
harness/: assert_output.py  compose.yaml  run.sh  send_udp.py  start_ffmpeg.sh
scripts/: bootstrap-cloudlinux.sh  bootstrap-ubuntu.sh
src/udp_analyzer/: __init__.py  cli.py  collectors.py  ebpf.py  models.py  output.py  processes.py  writers.py
tests/: test_checkpoint_aggregation.py  test_ebpf.py  test_harness_assert_output.py  test_map_selection.py  test_models.py  test_processes.py  test_writers.py
